# gpo

./: .gitignore  README.md  TODO.md  app.py  docker-compose.yml  git-scopes.json  opinions.py  package.json  pyproject.toml  run.sh  sessions.py  tailwind-input.css  uwsgi.ini
excel-files/: MAT-2330_2026-10.csv  QUI-0140_2026-10.csv
static/: styles.css
templates/: index.html  opinions_fragments.html  sessions_fragments.html
tests/: test_opinions.py  test_sessions.py
