[project]
name = "uni-get-profesor-opinions"
version = "0.1.0"
description = "Project to get the uasd profesors opinions that are on nuevosemestre.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "uwsgi>=2.0.31",
]
